--- a/apps/website/src/content/docs/index.mdx
+++ b/apps/website/src/content/docs/index.mdx
@@ -1,36 +1,37 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Welcome to the ColorKit world
+description: Welcome to the ColorKit world.
 template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Welcome to the ColorKit world!<br/>The ultimate JavaScript library for color manipulation and selection.<br/>Provide headless ColorPicker component, and a beautiful ColorPicker component is in here too.
   image:
-    file: ../../assets/houston.webp
+    file: /public/colorkit.png
   actions:
     - text: Get started
-      link: /core
+      link: /atom
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
-      icon: external
+    - text: Playground
+      link: /playground
+      icon: rocket
+			variant: secondary
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+import { Card, CardGrid } from '@astrojs/starlight/components'
 
-## Next steps
+## Features
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
+<CardGrid>
+  <Card title="Atomic" icon="pencil">
+    All utilities is Atomic
+  </Card>
+  <Card title="Flexible" icon="puzzle">
+    Building your ColorPicker with flexible
+  </Card>
+  <Card title="Instant-on" icon="star">
+    Provide tons of Instant-on Component for you
+  </Card>
+  <Card title="Coming soon.." icon="open-book">
+    Tons of features are coming soon
+  </Card>
 </CardGrid>
